--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<!-- 新增练手项目 -->
 		<module>springboot-data-jpa</module>
+		<module>springboot-web-readinglist</module>
 	</modules>
 
 </project>
